array and String tasks added